# naparrrnik

./: .envrc.template  .gitignore  config.py  pyproject.toml
pizdani/: __main__.py  config.py
pizdani/models/: enums.py  update.py
speech/: app.py  config.py  synth.py
